# Beads_Simulator

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.3.2-pre1  CMakeLists.txt.user.3d83ab2  CMakeLists.txt.user.3dcb66f  Makefile  ball.cpp  ball.h  configuration.cpp  configuration.h  display.cpp  display.h  main.cpp  misc.cpp  misc.hpp  odes.cpp  odes.h  params.cnf  params.cnf~  plateau.cpp  plateau.h  rand.40b.3eq  reaction.cpp  reaction.h  species.cpp  species.h
Params/: WorldInterface.rb  rand.40b.3eq  world.conf
